--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,10 @@
 @use 'normalize';
 @use 'variables';
 @use 'header';
+
+/*General Styles*/
+*{
+    margin: 0;
+    padding: 0;
+    font-family: variables.$nunito-sans;
+}
