--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,4 +9,11 @@
     margin: 0;
     padding: 0;
     font-family: variables.$nunito-sans;
+    color: variables.$light-mode-text;
+}
+
+.properties{
+    font-weight: bold;
+    font-size: 15px;
+    margin-right: 3px;
 }
