--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -4,9 +4,15 @@
 /*Header Styles*/
 .header{
     width: 100%;
+    margin-bottom: 150px;
 
     &__nav{
+        background-color: #fff;
         box-shadow: 1px 1px 3px 2px #ddd;
+        position: fixed;
+        top: 0px;
+        z-index: 10;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
