--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -145,6 +145,76 @@
             }
         }
     }
+
+    &__country{
+        display: flex;
+        width: 1050px;
+        justify-content: space-between;
+
+        &__img{
+            height: 405px;
+            width: 600px;
+            margin-left: 70px;
+            box-shadow: 1px 1px 20px 20px #ddd;
+        }
+
+        &__data-container{
+            margin-left: 50px;
+            margin-right: 50px;
+            height: 405px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+
+            &__title{
+                font-weight: bold;
+            }
+
+            &__info-container{
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                height: 130px;
+
+                &__top-level-domain{
+                    margin-left: 30px;
+                }
+
+                &__currencies{
+                    margin-left: 30px;
+                }
+
+                &__lang{
+                    margin-left: 30px;
+                }
+            }
+
+            &__border{
+                width: 500px;
+                align-items: center;
+                display: flex;
+                flex-wrap: wrap;
+
+                &__span{
+                    position: relative;
+                    display: flex;
+                    width: 120px;
+                }
+
+                &__border-container{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 10px;
+                    padding: 3px;
+                    width: 50px;
+                    text-align: center;
+                    border-radius: 10px;
+                    box-shadow: 1px 1px 3px 2px #ddd;
+                }
+            }
+        }
+    }
 }
 
 @media only screen and (max-width: 480px){
