Fixing header responsive styles

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -62,6 +62,7 @@
 
         &__nav{
             height: 20vh;
+            width: 100vw;
 
             &__title{
                 font-size: 16px;
