--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @use 'variables';
 @use 'header';
 @use 'main';
+@use 'footer';
 
 /*General Styles*/
 *{
@@ -12,8 +13,29 @@
     color: variables.$light-mode-text;
 }
 
+body{
+    transition: all .5s;
+}
+
 .properties{
     font-weight: bold;
     font-size: 15px;
     margin-right: 3px;
+}
+
+@media only screen and (max-width: 480px){
+    body{
+        width: 100vw;
+        height: 100px;
+    }
+}
+
+@keyframes appear{
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
 }
